core/src/test/resources/de/uni_luebeck/isp/tessla/core/errors/multiple-definitions-annotation2.tessla
def @@foo
def @@foo

in x: Events[Int]
out x